main.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*-----------------------------------------------------------------*/
body {
    background-color: #f5f5f5; /* Light grey background */
    color: #333; /* Dark grey text */
}

main {
    display: flex; /* Display the content side by side */
    flex-direction: column;
    justify-content: flex-start; /* Space between the content */
    width: 100%; /* Full width */
    height: 100vh; /* Full height */
}

.Menu-text {
    display: none;
}

.home-picture {
    width: 100%;
    height: 20vh;
    object-fit: cover;
}


/* ASIDE */
/* -------------------------------------------------------------------------- */
aside {
    width: 100%; /* Set the width of the sidebar */
    min-width: 102px; /* Set the minimum width of the sidebar */
    height: 13vh; /* Full-height: remove this if you want "auto" height */
    position: relative; /* Remove fixed position */
    z-index: 1; /* Stay on top */
    background-color: #333; /* Dark grey background */
    color: #fff; /* White text */
}

.aside-list {
    display: flex; /* Display the content side by side */
    flex-flow: row wrap; /* Wrap the content */
    justify-content: space-evenly; /* Evenly space the li tags */
    margin: 3% 10% 5% 10%; /* Adjust padding */
}

.aside-list-items {
    margin: 1% 0; /* Add some margin to the top and bottom */
}

.aside-text {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: #fff;
    margin: 10px;
}

.selected-page {
    background-color: #616161; /* Dark grey background */
    color: #fff; /* White text */
    padding: 2px; /* Add some padding */
    margin: 2px 0; /* Add some margin to the top and bottom */
    border-radius: 5px; /* Rounded corners */
    text-decoration: none; /* Remove the underline */

}
/* -------------------------------------------------------------------------- */

/* INDEX */
/* -------------------------------------------------------------------------- */
.side-panel-highlight-text {
    background-color: #333; /* Dark grey background */
    color: #fff; /* White text */
    padding: 2px; /* Add some padding */
    margin: 2px 0; /* Add some margin to the top and bottom */
    border-radius: 5px; /* Rounded corners */
    text-decoration: none; /* Remove the underline */
}

/* CONTACT */
/* -------------------------------------------------------------------------- */
#contact {
    background-color: #f5f5f5; /* Light grey background */
}


#contact h3 {
    font-size: 1.5em; /* Increase the font size */
    color: #333; /* Dark grey text */
}

#contact a {
    font-size: 1.2em; /* Increase the font size */
    color: #666; /* Grey text */
    text-decoration: none; /* Remove the underline */
}

#contact a:hover {
    color: #333; /* Dark grey text when hovered */
}

.contact-list {
    margin: 50px auto; /* Add some margin to the top and bottom and auto for horizontal centering */
    display: flex; /* Display the content side by side */
    flex-flow: column wrap; /* Wrap the content */
    justify-content: flex-start; /* Align items at the top */
    align-items: flex-start; /* Align items at the left */
}

.contact-list-item {
    margin: 10px 0px;
}


/* ARTICLE */
/* -------------------------------------------------------------------------- */
article {
    display: flex; /* Display the content side by side */
    flex-flow: column nowrap; /* Wrap the content */
}

.article-title {
    font-size: 2em; /* Increase the font size */
    font-weight: bold; /* Bold text */
    color: #333; /* Dark grey text */
    padding: 2% 5% 5% 5%; /* top,right,bottom,left */
    align-self: center;
    font-family: Arial, Helvetica, sans-serif;
    border-radius: 0px 10px 0px 10px;
}

.article-subtitle {
    font-family: Roboto, Arial, Helvetica, sans-serif;
    font-size: 1.5em; /* Increase the font size */
    margin: 2% 2%;
    padding-bottom: 0.5%;
    color: #333; /* Dark grey text */
    border-bottom: 1.5px solid #b7b7b7; /* Add a line under the subtitle */
    border-radius: 5px; /* Rounded corners */
}

.article-text {
    font-size: 1.2rem; /* Increase the font size */
    font-family: Arial, Helvetica, sans-serif;
    margin-top: 7px;
    align-self: center;
    max-width: 90%;
}

/* -------------------------------------------------------------------------- */
.self-picture {
    border-radius: 50%;
    margin-top: 40px;
    width: 200px;
    height: 200px;
    align-self: center;
}

/* PROJECT */
/* -------------------------------------------------------------------------- */
.project-item {
    margin: 10px 0; /* Add some margin to the top and bottom */
    padding: 20px; /* Add some padding */
    margin: 0px 10px;
    border-radius: 20px; /* Rounded corners */
    background-color: #c8c8c8; /* White background */
    color: #333; /* Dark grey text */
    text-decoration: none; /* Remove the underline */
}
/* add a shadow to the project item */
.project-item:hover {
    box-shadow: 0 0 10px 0 #333; /* Add a shadow when hovered */
}

.github-stats-section {
    display: flex; /* Display the content side by side */
    flex-flow: column wrap; /* Wrap the content */
    align-items: center; /* Center the content vertically */
    justify-content: space-evenly; /* Evenly space the content */
}

.github-stats-item {
    display: flex; /* Display the content side by side */
    margin-top: 10px; /* Add some margin to the top */
}

.divider-line {
    border-bottom: 0.5px solid #333; /* Add a border line */
    margin: 10px 15px; /* Add some margin to the top and bottom */
}


.project-title {
    font-size: 1.5em; /* Increase the font size */
    margin-bottom: 10px; /* Add some margin to the bottom */
    display: inline-block; /* Display the content inline */
}

.project-title-link {
    color: #333; /* Dark grey text when hovered */
    text-decoration: none; /* Remove the underline */
    font-family: "Roboto", Arial, Helvetica, sans-serif;
}

.project-title-link:hover {
    color: #333; /* Dark grey text when hovered */
}

.project-description {
    line-height: 1.6; /* Increase the line height for readability */
}

/* INTERESTS */
/* -------------------------------------------------------------------------- */
.tools-list {
    margin: 50px auto; /* Add margin to the top and bottom and set left and right margins to auto */
    display: flex; /* Display the content side by side */
    flex-flow: row wrap; /* Wrap the content */
    justify-content: center; /* Center the content horizontally */
}

.tools-list-item {
    display: flex; /* Display the content side by side */
    color: #333; /* Change the text color to dark grey */
    font-family: Arial, sans-serif; /* Change the font style */
    margin: 5px 0; /* Add some margin to the top and bottom */
    flex: 0 0 50%; /* Each item will take up 50% of the line */
    box-sizing: border-box; /* Include padding and border in element's total width and height */
    justify-content: flex-start; /* Align the text to the left */
}

.tools-list-link {
    text-decoration: underline; /* Add an underline */
    color: #333; /* Dark grey text */
}

.tools-list-link:hover {
    background-color: #333; /* Change the background color to light grey when hovered */
    border-radius: 5px; /* Rounded corners */
    color: #fff; /* Change the text color to white when hovered */
    padding: 1.5px; /* Add some padding */
}

.contact-page-ref {
    color: #333; /* Dark grey text */
    text-decoration: none; /* Remove the underline */
}

.contact-page-ref:hover {
    background-color: #333; /* Change the background color to light grey when hovered */
    border-radius: 5px; /* Rounded corners */
    color: #fff; /* Change the text color to white when hovered */
}

·/* SECTION */
/* -------------------------------------------------------------------------- */
/* The "target" attribute is used to show the Home section */
.section {
    background-color: #d0d0d0; /* White background */
    color: #333; /* Dark grey text */
    display: flex;
    flex-flow: column wrap;
}

/* BANNERS */
/* -------------------------------------------------------------------------- */
.interests-banner {
    background-color: #616161; /* Dark grey background */
    color: #fff; /* White text */
    height: 20vh;
    width: 100%;
}


/* -------------------------------------------------------------------------- */

/* FOOTER */
/* -------------------------------------------------------------------------- */
.footer-style {
    background-color: #333; /* Dark grey background */
    width: 100vw;
}

.footer-style p {
    color: #ffffff; /* White text */
    align-self: center;
}

@media screen and (min-width: 768px) {
    main {
        display: flex; /* Display the content side by side */
        flex-flow: column wrap; /* Wrap the content */
        justify-content: space-between; /* Space between the content */
        width: 100%; /* Full width */
        height: 100vh; /* Full height */
    }
    
    /* ASIDE */
    /* -------------------------------------------------------------------------- */
    /* change aside links colors and style */
    aside {
        width: 10vw; /* Set the width of the sidebar */
        height: 100%; /* Full-height: remove this if you want "auto" height */
        border-right: 1.5px solid #000000;
    }

    .aside-list {
        display: flex; /* Display the content side by side */
        flex-flow: column wrap; /* Wrap the content */
        justify-content: space-evenly; /* Evenly space the li tags */
        margin: 24% 10%; /* Adjust padding */
    }
    
    /* -------------------------------------------------------------------------- */
    
    .home-picture {
        width: 100%;
        flex: 0 1 auto; /* Adjust the width */
    }
    
    /* ARTICLE */
    /* -------------------------------------------------------------------------- */
    article {
        flex: 1 0 100%; /* Adjust the width */
        height: 100%;
        width: 90%;
    }
    
    .article-text {
        max-width: 60%;
    }
    
    /* -------------------------------------------------------------------------- */
    
    /* PROJECTS LIST */
    /* -------------------------------------------------------------------------- */
    
    .github-stats-section {
        flex-flow: row wrap; /* Wrap the content */
    }
    /* -------------------------------------------------------------------------- */

    /* INTERESTS */
    /* -------------------------------------------------------------------------- */
    .tools-list-link {
        display: flex; /* Display the content side by side */
        text-decoration: none; /* Remove the underline */
        color: #333; /* Dark grey text */    
    }
    
    /* CONTACT */
    /* -------------------------------------------------------------------------- */
}

